[gd_scene load_steps=5 format=3 uid="uid://dsgqwpeeukta2"]

[ext_resource type="Script" path="res://fisherman.gd" id="1_3j0aq"]
[ext_resource type="Texture2D" uid="uid://dw48b2gaxxqva" path="res://art/fisherman/fisherman.png" id="2_dqehh"]
[ext_resource type="Texture2D" uid="uid://cgrlc16wp42l6" path="res://art/fisherman/hook.png" id="3_xf73i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7gfcw"]
radius = 6.0

[node name="Fisherman" type="Node2D"]
script = ExtResource("1_3j0aq")

[node name="FishermanSprite" type="Sprite2D" parent="."]
position = Vector2(523, 159)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_dqehh")

[node name="FishingLine" type="Line2D" parent="."]
z_index = 6
points = PackedVector2Array(599, 126, 594, 337)
width = 1.0
default_color = Color(0.352941, 0.435294, 0.427451, 1)
antialiased = true

[node name="Hook" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(594, 337)
texture = ExtResource("3_xf73i")
centered = false
offset = Vector2(-4, -1)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Hook"]
position = Vector2(-3.09944e-06, 7)
scale = Vector2(0.7, 0.7)

[node name="HookArea2D" type="Area2D" parent="Hook"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hook/HookArea2D"]
position = Vector2(0, 9)
rotation = 1.71385
shape = SubResource("CircleShape2D_7gfcw")

[connection signal="screen_exited" from="Hook/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Hook/HookArea2D" to="." method="_on_hook_area_2d_body_entered"]
